--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@ https://www.tooplate.com/view/2115-marvel
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Say hello</h3>
-                  <p class="footer-text mb-0">010 020 0960</p>
-                  <p><a href="kamalsinghkhanna2706@gmail.com">email</a></p>
+                  <p class="footer-text mb-0">+917906251317</p>
+                  <p><a href="kamalsinghkhanna2706@gmail.com">kamalsinghkhanna2706@gmail.com</a></p>
                 </div>
 
                 <ul class="social-links">
-                     <li><a href="#" class="uil uil-dribbble" data-toggle="tooltip" data-placement="left" title="Dribbble"></a></li>
-                     <li><a href="#" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram"></a></li>
-                     <li><a href="#" class="uil uil-youtube" data-toggle="tooltip" data-placement="left" title="Youtube"></a></li>
+                     <li><a href="https://twitter.com/twts_of_mine" class="uil uil-twitter" data-toggle="tooltip" data-placement="left" title="Twitter"></a></li>
+                     <li><a href="https://www.instagram.com/_kamalkhanna/" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram"></a></li>
+                     <li><a href="https://www.linkedin.com/in/kamal-khanna-0547291b6/" class="uil uil-linkedin" data-toggle="tooltip" data-placement="left" title="Linkedin"></a></li>
                 </ul>
             </div>
           </div>
@@ -271,8 +271,7 @@ https://www.tooplate.com/view/2115-marvel
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">Copyright &copy; 2019 Company Name . All rights reserved</p>
-                        <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+                        <p class="copyright-text text-center">Copyright &copy; 2021. All rights reserved</p>
                     </div>
                     
                </div>
