--- a/project.html
+++ b/project.html
@@ -146,7 +146,7 @@
         </div>
         <div class="project-item">
             <div class="pro-demo">
-                <h4>Thermomete page</h4>
+                <h4>Thermometer page</h4>
                 <img class="pro-img" src="/images/project/Screenshot (18).png" alt="">
             </div>
             <div class="show-pro">
